--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "axios": "^1.9.0",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vite": "^6.3.5"
+  },
+  "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@vitejs/plugin-react": "^4.4.1"
   }
 }
